[project]
name = "pyimg"
version = "0.1.0"
authors = [
    {name = "kewuaa"}
]
description = "digital image processing library made by cython"
dependencies = []
readme = "README.md"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-dir]
"" = "./src"

[tool.setuptools.packages.find]
where = ["./src"]
exclude = ["main"]

[tool.setuptools.package-data]
pyimg = ["*.c"]

[tool.setuptools.exclude-package-data]
pyimg = ["*.c"]

[tool.pyright]
venv = 'cv'
